--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
-    
+
     <head>
         <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
-<title>Oreva - Web & App developer</title>
+<title>Oreva - Full Stack Developer</title>
 <script src="assets/js/vendors/color-modes.js"></script>
 <!-- Favicon icon-->
 <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/template/favicon-gradient.svg" />
