--- a/index.html
+++ b/index.html
@@ -264,12 +264,9 @@
             </div>
             <div class="mb-3">
                 <span class="text-400 fs-5">Email</span>
-                <p class="mb-0">contact@Oreva.dev</p>
+                <p class="mb-0">orevadavidumolo@gmail.com</p>
             </div>
-            <div class="mb-3">
-                <span class="text-400 fs-5">Skype</span>
-                <p class="mb-0">JamesDeveloper</p>
-            </div>
+    
             <div class="mb-3">
                 <span class="text-400 fs-5">Address</span>
                 <p class="mb-0">United Kingdom</p>
