--- a/index.html
+++ b/index.html
@@ -205,20 +205,16 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="index.html#portfolio">Portfolio</a>
+            <a class="nav-link" href="index.html#experience">Experience</a>
         </li>
 
-
         <li class="nav-item">
-            <a class="nav-link" href="index.html#experience">Experience</a>
+            <a class="nav-link" href="index.html#portfolio">Portfolio</a>
         </li>
 
         <li class="nav-item">
             <a class="nav-link" href="index.html#services">Services</a>
         </li>
-
-      
-
        
         <li class="nav-item">
             <a class="nav-link" href="index.html#contact">Contact</a>
@@ -1492,9 +1488,9 @@
                 <div class="navigation d-flex align-items-center justify-content-center flex-wrap gap-4 my-4">
                     <a href="index.html#about" class="fs-6"> About me </a>
                     <a href="index.html#resume" class="fs-6"> Resume </a>
-                    <a href="index.html#services" class="fs-6"> Services </a>
+                    <a href="index.html#experience" class="fs-6"> Experience </a>
                     <a href="index.html#portfolio" class="fs-6"> Portfolio </a>
-                    <a href="index.html#blog" class="fs-6"> Blog </a>
+                    <a href="index.html#services" class="fs-6"> Services </a>
                     <a href="index.html#contact" class="fs-6"> Contact </a>
                 </div>
             </div>
