--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
                     <div class="blog-card__content position-relative text-center mt-4">
                       <span class="blog-card__date fs-7">Travel • Planner</span>
                       <h6 class="blog-card__title mt-2">Smart Travel</h6>
-                      <p class="blog-card__description fs-7">A full-stack travel assistant platform that generates personalized travel itineraries using AI. Integrates geolocation, weather updates, and nearby attractions to enhance user planning experience.</p>
+                      <p class="blog-card__description fs-7"  style="text-align: left;">A full-stack travel assistant platform that generates personalized travel itineraries using AI. Integrates geolocation, weather updates, and nearby attractions to enhance user planning experience.</p>
                   
                       <div class="d-flex flex-wrap align-items-center gap-3 mt-7">
                         <a class="text-300 border-bottom border-1 px-2 pb-2 link-hover">
@@ -784,7 +784,7 @@
       <div class="blog-card__content position-relative text-center mt-4">
         <span class="blog-card__date fs-7">Business • Personal Brand</span>
         <h6 class="blog-card__title mt-2">Bukola Osuntuyi</h6>
-        <p class="blog-card__description fs-7">Professional portfolio for a consultant and startup mentor. Includes services, speaking events, and training highlights.</p>
+        <p class="blog-card__description fs-7"  style="text-align: left;">Professional portfolio for a consultant and startup mentor. Includes services, speaking events, and training highlights.</p>
         <div class="d-flex flex-wrap align-items-center gap-3 mt-7">
           <a href="https://bukolaosuntuyi.com/" class="text-300 border-bottom border-1 px-2 pb-2 link-hover" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" fill="none">
@@ -813,7 +813,7 @@
       <div class="blog-card__content position-relative text-center mt-4">
         <span class="blog-card__date fs-7">Non-Profit • Art</span>
         <h6 class="blog-card__title mt-2">The Gani Odutokun Foundation</h6>
-        <p class="blog-card__description fs-7">Official foundation site preserving the legacy of Gani Odutokun through galleries, events, and youth empowerment initiatives.</p>
+        <p class="blog-card__description fs-7"  style="text-align: left;">Official foundation site preserving the legacy of Gani Odutokun through galleries, events, and youth empowerment initiatives.</p>
         <div class="d-flex flex-wrap align-items-center gap-3 mt-7">
           <a href="https://theganiodutokunfoundation.com/" class="text-300 border-bottom border-1 px-2 pb-2 link-hover" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" fill="none">
@@ -844,7 +844,7 @@
       <div class="blog-card__content position-relative text-center mt-4">
         <span class="blog-card__date fs-7">IT Services • Custom Solutions</span>
         <h6 class="blog-card__title mt-2">Elevani</h6>
-        <p class="blog-card__description fs-7">Software solutions provider offering web systems, product development, and technology consultancy for growing businesses.</p>
+        <p class="blog-card__description fs-7" style="text-align: left;">Software solutions provider offering web systems, product development, and technology consultancy for growing businesses.</p>
         <div class="d-flex flex-wrap align-items-center gap-3 mt-7">
           <a href="https://elevani.com.ng" class="text-300 border-bottom border-1 px-2 pb-2 link-hover" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" fill="none">
@@ -875,7 +875,7 @@
       <div class="blog-card__content position-relative text-center mt-4">
         <span class="blog-card__date fs-7">Engineering • Construction</span>
         <h6 class="blog-card__title mt-2">Bomaret Engineering Ltd</h6>
-        <p class="blog-card__description fs-7">Corporate construction company site with project gallery, contact integrations, and company profile for real estate, mechanical and civil works.</p>
+        <p class="blog-card__description fs-7"  style="text-align: left;">Corporate construction company site with project gallery, contact integrations, and company profile for real estate, mechanical and civil works.</p>
         <div class="d-flex flex-wrap align-items-center gap-3 mt-7">
           <a href="https://bomaretengineering.com" class="text-300 border-bottom border-1 px-2 pb-2 link-hover" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" fill="none">
@@ -905,7 +905,7 @@
       <div class="blog-card__content position-relative text-center mt-4">
         <span class="blog-card__date fs-7">School • Management System</span>
         <h6 class="blog-card__title mt-2">New Era Model Schools</h6>
-        <p class="blog-card__description fs-7">School management website with E-learning access, application portal, term schedules, and gallery for parents and students.</p>
+        <p class="blog-card__description fs-7" style="text-align: left;">School management website with E-learning access, application portal, term schedules, and gallery for parents and students.</p>
         <div class="d-flex flex-wrap align-items-center gap-3 mt-7">
           <a href="https://neweramodelschools.com" class="text-300 border-bottom border-1 px-2 pb-2 link-hover" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="13" height="13" viewBox="0 0 13 13" fill="none">
