--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                                 <div class="d-flex align-items-center gap-2">
                                   <img src="assets/imgs/niit.png" style="width:70px;border-radius: 100%;background-color: white;" />
                                   <div class="d-flex flex-column ms-2">
-                                    <h5 class="mb-1">NIIT, Warri, Nigeria</h5>
+                                    <h5 class="mb-1">NIIT Warri, Nigeria</h5>
                                     <span class="text-300">2020 – Present (Part-Time)</span>
                                   </div>
                                 </div>
@@ -684,7 +684,7 @@
                                 <div class="d-flex align-items-center gap-2">
                                     <img src="assets/imgs/niit.png" style="width:70px;border-radius: 100%;background-color: white;" />
                                   <div class="d-flex flex-column ms-2">
-                                    <h5 class="mb-1">NIIT, Warri, Nigeria</h5>
+                                    <h5 class="mb-1">NIIT Warri, Nigeria</h5>
                                     <span class="text-300">2018 – 2020</span>
                                   </div>
                                 </div>
